# scrapdog-server

./: .env  Cargo.toml
migrations/2021-03-02-122318_init/: up.sql
migrations/2021-06-09-131559_init/: down.sql  up.sql
scrapdog_derive/: Cargo.toml
scrapdog_derive/src/: lib.rs
src/: main.rs  model.rs  parser.rs  paths.rs  server.rs  storage.rs
src/model/: blob.rs  enums.rs  mod.rs  schema.rs
src/parser/: icon.rs  mod.rs  regex_utils.rs  resource.rs  time.rs
src/storage/: buckets.rs  importer.rs  loader.rs  mod.rs  schema.rs
src/storage/importer/: mod.rs
src/storage/importer/node_mapper/: icon.rs  mod.rs  time.rs
src/storage/types/: blob.rs  mod.rs
src/types/: icon.rs  mod.rs  time.rs
