[package]
name = "scrapdog"
description = "Backend server for the ScrapBook Classic webextention"
version = "0.1.0"
authors = ["francisthebasilisk <snorkysnark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
minidom = "0.13.0"
directories-next = "2.0.0"
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.2"
num_enum = "0.5.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
regex = "1.4.5"
lazy_static = "1.4.0"

scrapdog_derive = { path = "scrapdog_derive" }
