[package]
name = "scrapdog"
description = "Backend server for the ScrapBook Classic webextention"
version = "0.1.0"
authors = ["francisthebasilisk <snorkysnark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrapdog_derive = { path = "scrapdog_derive" }

clap = "3.0.0-beta.2"
minidom = "0.13.0"
bincode = "1.3.2"
num_enum = "0.5.1"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"

anyhow = "1.0.38"
directories-next = "2.0.0"
regex = "1.4.5"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.1"

diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies.libsqlite3-sys]
version = ">=0.8.0, <0.19.0"
features = ["min_sqlite_version_3_7_16", "bundled"]
